--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,9 @@
 name: varity
 description: Brightness and volume manager for android.
-
+homepage: https://github.com/ekoputrapratama/varity
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
-publish_to: "none" # Remove this line if you wish to publish to pub.dev
+
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -18,17 +18,15 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 version: 1.0.9+4
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.12.0 <=3.3.9"
 
 dependencies:
   flutter:
     sdk: flutter
   flutter_localizations: # Add this line
     sdk: flutter
-  android_native:
-    path: ../android_native
-  sonicdb:
-    path: ../sonicdb
+  android_native: ^0.0.3
+  sonicdb: ^0.0.2
   showcaseview: ^1.0.0
 
   firebase_core: ^2.2.0
