--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -25,9 +25,12 @@ if (flutterVersionName == null) {
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
-apply plugin: 'com.google.gms.google-services'
 apply plugin: 'kotlin-kapt'
-apply plugin: 'com.google.firebase.crashlytics'
+
+
+def keystorePropertiesFile = rootProject.file("key.properties")
+def keystoreProperties = new Properties()
+keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
 
 android {
   compileSdkVersion 33
@@ -38,18 +41,19 @@ android {
   
   signingConfigs {
     release {
-      storeFile file("D:\\Projects\\Flutter\\varity-nullsafety\\mixaline.jks")
-      storePassword 'mixaline'
-      keyAlias 'mixaline'
-      keyPassword 'mixaline'
+      keyAlias keystoreProperties['keyAlias']
+      keyPassword keystoreProperties['keyPassword']
+      storeFile file(keystoreProperties['storeFile'])
+      storePassword keystoreProperties['storePassword']
     }
     debug {
-      storeFile file("D:\\Projects\\Flutter\\varity-nullsafety\\mixaline.jks")
-      storePassword 'mixaline'
-      keyAlias 'mixaline'
-      keyPassword 'mixaline'
+      keyAlias keystoreProperties['keyAlias']
+      keyPassword keystoreProperties['keyPassword']
+      storeFile file(keystoreProperties['storeFile'])
+      storePassword keystoreProperties['storePassword']
     }
   }
+  
   splits {
     abi {
       enable false
@@ -105,10 +109,8 @@ dependencies {
   implementation 'androidx.room:room-ktx:2.4.3'
   implementation "com.android.billingclient:billing:$billing_version"
   implementation 'com.ironsource.sdk:mediationsdk:7.2.5'
-  implementation 'com.google.android.gms:play-services-appset:16.0.2'
-  implementation 'com.google.android.gms:play-services-ads-identifier:18.0.1'
-  implementation 'com.google.android.gms:play-services-basement:18.1.0'
-  
+  implementation 'io.sentry:sentry-android:6.9.1'
+
   api "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1"
   // ... other project dependencies
   
