--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,14 +28,7 @@ dependencies:
   android_native: ^0.0.4
   sonicdb: ^0.0.4
   showcaseview: ^1.0.0
-
-  firebase_core: ^2.2.0
-  firebase_auth: ^4.1.2
-  firebase_crashlytics: ^3.0.5
-  cloud_firestore: ^4.0.5
-
-  google_sign_in: "^5.4.0"
-
+  sentry_flutter: ^6.17.0
   flutter_svg: ^0.21.0-nullsafety.0
   get: ^4.1.4
   path_provider: ^2.0.1
@@ -44,8 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   provider: ^5.0.0
   getwidget: ^2.0.4
-  # unity_mediation: ^0.1.0
-  # unity_ads_plugin: ^0.3.7
+  
 dev_dependencies:
   build_runner:
   flutter_test:
