--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -41,10 +41,10 @@ android {
   
   signingConfigs {
     release {
-      keyAlias keystoreProperties['keyAlias']
-      keyPassword keystoreProperties['keyPassword']
-      storeFile file(keystoreProperties['storeFile'])
-      storePassword keystoreProperties['storePassword']
+      keyAlias "$System.env.ANDROID_KEY_ALIAS"
+      keyPassword "$System.env.ANDROID_KEY_PASSWORD"
+      storeFile file("$System.env.ANDROID_STORE_FILE")
+      storePassword "$System.env.ANDROID_STORE_PASSWORD"
     }
     debug {
       keyAlias keystoreProperties['keyAlias']
@@ -53,7 +53,7 @@ android {
       storePassword keystoreProperties['storePassword']
     }
   }
-  
+
   splits {
     abi {
       enable false
