--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -47,10 +47,10 @@ android {
       storePassword "$System.env.ANDROID_STORE_PASSWORD"
     }
     debug {
-      keyAlias keystoreProperties['keyAlias']
-      keyPassword keystoreProperties['keyPassword']
-      storeFile file(keystoreProperties['storeFile'])
-      storePassword keystoreProperties['storePassword']
+      keyAlias "$System.env.ANDROID_KEY_ALIAS"
+      keyPassword "$System.env.ANDROID_KEY_PASSWORD"
+      storeFile file("$System.env.ANDROID_STORE_FILE")
+      storePassword "$System.env.ANDROID_STORE_PASSWORD"
     }
   }
 
