--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,19 +17,18 @@ jobs:
       - name: Install dependencies
         run: flutter pub get
       
-      - name: Setup key.properties
-        env:
-          ANDROID_KEY_ALIAS: ${{ secrets.ANDROID_KEY_ALIAS }}
-          ANDROID_KEY_PASSWORD: ${{ secrets.ANDROID_KEY_PASSWORD }}
-          ANDROID_STORE_PASSWORD: ${{ secrets.ANDROID_STORE_PASSWORD }}
-          ANDROID_STORE_FILE: ${{ secrets.ANDROID_STORE_FILE }}
-        run: |
-          cd android
-          echo storeFile=\"$ANDROID_STORE_FILE\" > key.properties;
-          echo storePassword=\"$ANDROID_STORE_PASSWORD\" > key.properties;
-          echo keyAlias=\"$ANDROID_KEY_ALIAS\" > key.properties;
-          echo keyPassword=\"$ANDROID_KEY_PASSWORD\" > key.properties;
-          cat key.properties
+      # - name: Setup key.properties
+      #   env:
+      #     ANDROID_KEY_ALIAS: ${{ secrets.ANDROID_KEY_ALIAS }}
+      #     ANDROID_KEY_PASSWORD: ${{ secrets.ANDROID_KEY_PASSWORD }}
+      #     ANDROID_STORE_PASSWORD: ${{ secrets.ANDROID_STORE_PASSWORD }}
+      #     ANDROID_STORE_FILE: ${{ secrets.ANDROID_STORE_FILE }}
+      #   run: |
+      #     cd android
+      #     echo storeFile=\"$ANDROID_STORE_FILE\" > key.properties;
+      #     echo storePassword=\"$ANDROID_STORE_PASSWORD\" > key.properties;
+      #     echo keyAlias=\"$ANDROID_KEY_ALIAS\" > key.properties;
+      #     echo keyPassword=\"$ANDROID_KEY_PASSWORD\" > key.properties;
 
       # let's exlude the tests right now, didn't have the time to make all this tests
       # - name: Run unit tests
@@ -47,9 +46,19 @@ jobs:
       #     api-level: 33
       #     script: flutter test integration_test
       - name: Build APK
+        env:
+          ANDROID_KEY_ALIAS: ${{ secrets.ANDROID_KEY_ALIAS }}
+          ANDROID_KEY_PASSWORD: ${{ secrets.ANDROID_KEY_PASSWORD }}
+          ANDROID_STORE_PASSWORD: ${{ secrets.ANDROID_STORE_PASSWORD }}
+          ANDROID_STORE_FILE: ${{ secrets.ANDROID_STORE_FILE }}
         run: flutter build apk
       
       - name: Build Appbundle
+        env:
+          ANDROID_KEY_ALIAS: ${{ secrets.ANDROID_KEY_ALIAS }}
+          ANDROID_KEY_PASSWORD: ${{ secrets.ANDROID_KEY_PASSWORD }}
+          ANDROID_STORE_PASSWORD: ${{ secrets.ANDROID_STORE_PASSWORD }}
+          ANDROID_STORE_FILE: ${{ secrets.ANDROID_STORE_FILE }}
         run: flutter build appbundle
 
       - name: Upload APK
