--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
           ANDROID_STORE_PASSWORD: ${{ secrets.ANDROID_STORE_PASSWORD }}
           ANDROID_STORE_FILE: ${{ secrets.ANDROID_STORE_FILE }}
         run: |
-          cd android
+          cd android;
           echo storeFile=\"$ANDROID_STORE_FILE\" > key.properties;
           echo storePassword=\"$ANDROID_STORE_PASSWORD\" > key.properties;
           echo keyAlias=\"$ANDROID_KEY_ALIAS\" > key.properties;
