--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,10 +19,10 @@ jobs:
       
       - name: Setup key.properties
         env:
-          ANDROID_KEY_ALIAS: ${{ secrets.ANDROID_KEY_ALIAS }}
-          ANDROID_KEY_PASSWORD: ${{ secrets.ANDROID_KEY_PASSWORD }}
-          ANDROID_STORE_PASSWORD: ${{ secrets.ANDROID_STORE_PASSWORD }}
-          ANDROID_STORE_FILE: ${{ secrets.ANDROID_STORE_FILE }}
+          ANDROID_KEY_ALIAS: '${{ secrets.ANDROID_KEY_ALIAS }}'
+          ANDROID_KEY_PASSWORD: '${{ secrets.ANDROID_KEY_PASSWORD }}'
+          ANDROID_STORE_PASSWORD: '${{ secrets.ANDROID_STORE_PASSWORD }}'
+          ANDROID_STORE_FILE: '${{ secrets.ANDROID_STORE_FILE }}'
         run: |
           cd android;
           echo storeFile=\"$ANDROID_STORE_FILE\" > key.properties;
@@ -47,18 +47,18 @@ jobs:
       #     script: flutter test integration_test
       - name: Build APK
         env:
-          ANDROID_KEY_ALIAS: ${{ secrets.ANDROID_KEY_ALIAS }}
-          ANDROID_KEY_PASSWORD: ${{ secrets.ANDROID_KEY_PASSWORD }}
-          ANDROID_STORE_PASSWORD: ${{ secrets.ANDROID_STORE_PASSWORD }}
-          ANDROID_STORE_FILE: ${{ secrets.ANDROID_STORE_FILE }}
+          ANDROID_KEY_ALIAS: '${{ secrets.ANDROID_KEY_ALIAS }}'
+          ANDROID_KEY_PASSWORD: '${{ secrets.ANDROID_KEY_PASSWORD }}'
+          ANDROID_STORE_PASSWORD: '${{ secrets.ANDROID_STORE_PASSWORD }}'
+          ANDROID_STORE_FILE: '${{ secrets.ANDROID_STORE_FILE }}'
         run: flutter build apk
       
       - name: Build Appbundle
         env:
-          ANDROID_KEY_ALIAS: ${{ secrets.ANDROID_KEY_ALIAS }}
-          ANDROID_KEY_PASSWORD: ${{ secrets.ANDROID_KEY_PASSWORD }}
-          ANDROID_STORE_PASSWORD: ${{ secrets.ANDROID_STORE_PASSWORD }}
-          ANDROID_STORE_FILE: ${{ secrets.ANDROID_STORE_FILE }}
+          ANDROID_KEY_ALIAS: '${{ secrets.ANDROID_KEY_ALIAS }}'
+          ANDROID_KEY_PASSWORD: '${{ secrets.ANDROID_KEY_PASSWORD }}'
+          ANDROID_STORE_PASSWORD: '${{ secrets.ANDROID_STORE_PASSWORD }}'
+          ANDROID_STORE_FILE: '${{ secrets.ANDROID_STORE_FILE }}'
         run: flutter build appbundle
 
       - name: Upload APK
