--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,7 @@ jobs:
         with:
           flutter-version: '3.3.9'
           channel: 'stable'
+          cache: true
 
       - name: Install dependencies
         run: flutter pub get
