--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -28,10 +28,11 @@ apply from: "$flutterRoot/packages/flutter_tools/gradle/flutter.gradle"
 apply plugin: 'kotlin-kapt'
 
 
-// def keystorePropertiesFile = rootProject.file("key.properties")
-// def keystoreProperties = new Properties()
-// keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
-
+def keystorePropertiesFile = rootProject.file("key.properties")
+def keystoreProperties = new Properties()
+if (keystorePropertiesFile.exists()) {
+  keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+}
 android {
   compileSdkVersion 33
   ndkVersion "22.1.7171670"
