--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -42,19 +42,18 @@ android {
   
   signingConfigs {
     release {
-      keyAlias "$System.env.ANDROID_KEY_ALIAS"
-      keyPassword "$System.env.ANDROID_KEY_PASSWORD"
-      storeFile file("$System.env.ANDROID_STORE_FILE")
-      storePassword "$System.env.ANDROID_STORE_PASSWORD"
+      keyAlias keystoreProperties['keyAlias']
+      keyPassword keystoreProperties['keyPassword']
+      storeFile file(keystoreProperties['storeFile'])
+      storePassword keystoreProperties['storePassword']
     }
     debug {
-      keyAlias "$System.env.ANDROID_KEY_ALIAS"
-      keyPassword "$System.env.ANDROID_KEY_PASSWORD"
-      storeFile file("$System.env.ANDROID_STORE_FILE")
-      storePassword "$System.env.ANDROID_STORE_PASSWORD"
+      keyAlias keystoreProperties['keyAlias']
+      keyPassword keystoreProperties['keyPassword']
+      storeFile file(keystoreProperties['storeFile'])
+      storePassword keystoreProperties['storePassword']
     }
   }
-
   splits {
     abi {
       enable false
