--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,9 @@
+on:
+  push:
+    # Sequence of patterns matched against refs/tags
+    tags:
+      - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
 name: Varity Workflow
-
-on: [push, workflow_dispatch]
 jobs:
   prerelease:
     runs-on: ubuntu-latest
@@ -35,19 +38,9 @@ jobs:
       #     api-level: 33
       #     script: flutter test integration_test
       - name: Build APK
-        env:
-          ANDROID_KEY_ALIAS: ${{ secrets.ANDROID_KEY_ALIAS }}
-          ANDROID_KEY_PASSWORD: ${{ secrets.ANDROID_KEY_PASSWORD }}
-          ANDROID_STORE_PASSWORD: ${{ secrets.ANDROID_STORE_PASSWORD }}
-          ANDROID_STORE_FILE: ${{ secrets.ANDROID_STORE_FILE }}
         run: flutter build apk
       
       - name: Build Appbundle
-        env:
-          ANDROID_KEY_ALIAS: ${{ secrets.ANDROID_KEY_ALIAS }}
-          ANDROID_KEY_PASSWORD: ${{ secrets.ANDROID_KEY_PASSWORD }}
-          ANDROID_STORE_PASSWORD: ${{ secrets.ANDROID_STORE_PASSWORD }}
-          ANDROID_STORE_FILE: ${{ secrets.ANDROID_STORE_FILE }}
         run: flutter build appbundle
       
       - name: "find env"
